# VirtualAIPet-

./: CMakeLists.txt  README.md
include/: Pet.h  PetAI.h  TTS.h  UI.h
resources/: readme.txt
src/: ONNXWrapper.cpp  Pet.cpp  PetAI.cpp  TTS.cpp  UI.cpp  main.cpp
